// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Generated by the C++ microgenerator.
// If you make any local changes, they will be lost.
// file:///workspace/generator/discovery/bigquery_public_google_rest_v2.json
// revision: 20240124

syntax = "proto3";

package google.cloud.cpp.bigquery.v2;

// Error details.
message ErrorProto {
  // Debugging information. This property is internal to Google and should not
  // be used.
  optional string debug_info = 1 [json_name = "debugInfo"];

  // Specifies where the error occurred, if present.
  optional string location = 2 [json_name = "location"];

  // A human-readable description of the error.
  optional string message = 3 [json_name = "message"];

  // A short error code that summarizes the error.
  optional string reason = 4 [json_name = "reason"];
}
